--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb+srv://smart_tracker:<db_password>@smart-tracker.sldkfzj.mongodb.net/?appName=Smart-tracker"
-JWT_SECRET=supersecretkey123
+MONGODB_URI='mongodb+srv://smart_tracker:yfgY9o60zeeFTBTm@smart-tracker.sldkfzj.mongodb.net/?appName=Smart-tracker'
+JWT_SECRET='supersecretkey123'
 PORT=5000
