--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGODB_URI='mongodb+srv://smart_tracker:yfgY9o60zeeFTBTm@smart-tracker.sldkfzj.mongodb.net/?appName=Smart-tracker'
 JWT_SECRET='supersecretkey123'
 PORT=5000
+GEMINI_API_KEY="AIzaSyBwSh18hAUVr1yz_c8XN4ym4ToI38VOPNc"
