--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ dist-ssr
 
 # Uploads
 backend/uploads/
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env
+frontend/.env
