--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"cd backend && npm run dev\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:ct": "playwright test -c playwright-ct.config.js",
+    "test-ct": "playwright test -c playwright-ct.config.js"
   },
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^5.0.13",
@@ -66,9 +68,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@playwright/experimental-ct-react": "^1.57.0",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.16",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
