Added Cost calculations(AI Analysis) , Also modified batch tracking and added a Group Batch feature

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
 MONGODB_URI='mongodb+srv://smart_tracker:yfgY9o60zeeFTBTm@smart-tracker.sldkfzj.mongodb.net/?appName=Smart-tracker'
 JWT_SECRET='supersecretkey123'
 PORT=5000
-GOOGLE_CLIENT_ID='29339535176-ip3224bg4t39irvg0lue1goaud4sp362.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET='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'
-GEMINI_API_KEY='AIzaSyDako0stvMVEBFeICjEViAl68kZE-RniJE'
+GEMINI_API_KEY="AIzaSyAkp1ls0e8lqb4mTx2hC5jZX_yGs8IYoE0"
